lib/src/mediapipe_face_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/mediapipe_face.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MediapipeFaceBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MediapipeFaceBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MediapipeFaceBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<MpFaceMeshContext> mp_face_mesh_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<MpFaceMeshCreateOptions> options,
  ) {
    return _mp_face_mesh_create(model_path, options);
  }

  late final _mp_face_mesh_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<MpFaceMeshCreateOptions>,
          )
        >
      >('mp_face_mesh_create');
  late final _mp_face_mesh_create = _mp_face_mesh_createPtr
      .asFunction<
        ffi.Pointer<MpFaceMeshContext> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<MpFaceMeshCreateOptions>,
        )
      >();

  void mp_face_mesh_destroy(ffi.Pointer<MpFaceMeshContext> context) {
    return _mp_face_mesh_destroy(context);
  }

  late final _mp_face_mesh_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceMeshContext>)>
      >('mp_face_mesh_destroy');
  late final _mp_face_mesh_destroy = _mp_face_mesh_destroyPtr
      .asFunction<void Function(ffi.Pointer<MpFaceMeshContext>)>();

  ffi.Pointer<MpFaceMeshResult> mp_face_mesh_process(
    ffi.Pointer<MpFaceMeshContext> context,
    ffi.Pointer<MpImage> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
  ) {
    return _mp_face_mesh_process(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
    );
  }

  late final _mp_face_mesh_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshResult> Function(
            ffi.Pointer<MpFaceMeshContext>,
            ffi.Pointer<MpImage>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
          )
        >
      >('mp_face_mesh_process');
  late final _mp_face_mesh_process = _mp_face_mesh_processPtr
      .asFunction<
        ffi.Pointer<MpFaceMeshResult> Function(
          ffi.Pointer<MpFaceMeshContext>,
          ffi.Pointer<MpImage>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
        )
      >();

  ffi.Pointer<MpFaceMeshResult> mp_face_mesh_process_nv21(
    ffi.Pointer<MpFaceMeshContext> context,
    ffi.Pointer<MpNv21Image> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
  ) {
    return _mp_face_mesh_process_nv21(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
    );
  }

  late final _mp_face_mesh_process_nv21Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshResult> Function(
            ffi.Pointer<MpFaceMeshContext>,
            ffi.Pointer<MpNv21Image>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
          )
        >
      >('mp_face_mesh_process_nv21');
  late final _mp_face_mesh_process_nv21 = _mp_face_mesh_process_nv21Ptr
      .asFunction<
        ffi.Pointer<MpFaceMeshResult> Function(
          ffi.Pointer<MpFaceMeshContext>,
          ffi.Pointer<MpNv21Image>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
        )
      >();

  void mp_face_mesh_release_result(ffi.Pointer<MpFaceMeshResult> result) {
    return _mp_face_mesh_release_result(result);
  }

  late final _mp_face_mesh_release_resultPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceMeshResult>)>
      >('mp_face_mesh_release_result');
  late final _mp_face_mesh_release_result = _mp_face_mesh_release_resultPtr
      .asFunction<void Function(ffi.Pointer<MpFaceMeshResult>)>();

  ffi.Pointer<ffi.Char> mp_face_mesh_last_error(
    ffi.Pointer<MpFaceMeshContext> context,
  ) {
    return _mp_face_mesh_last_error(context);
  }

  late final _mp_face_mesh_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceMeshContext>)
        >
      >('mp_face_mesh_last_error');
  late final _mp_face_mesh_last_error = _mp_face_mesh_last_errorPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceMeshContext>)
      >();

  ffi.Pointer<ffi.Char> mp_face_mesh_last_global_error() {
    return _mp_face_mesh_last_global_error();
  }

  late final _mp_face_mesh_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_face_mesh_last_global_error',
      );
  late final _mp_face_mesh_last_global_error =
      _mp_face_mesh_last_global_errorPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  MpDelegateType mp_face_mesh_active_delegate(
    ffi.Pointer<MpFaceMeshContext> context,
  ) {
    return MpDelegateType.fromValue(_mp_face_mesh_active_delegate(context));
  }

  late final _mp_face_mesh_active_delegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MpFaceMeshContext>)
        >
      >('mp_face_mesh_active_delegate');
  late final _mp_face_mesh_active_delegate = _mp_face_mesh_active_delegatePtr
      .asFunction<int Function(ffi.Pointer<MpFaceMeshContext>)>();

  MpDelegateType mp_face_mesh_active_iris_delegate(
    ffi.Pointer<MpFaceMeshContext> context,
  ) {
    return MpDelegateType.fromValue(
      _mp_face_mesh_active_iris_delegate(context),
    );
  }

  late final _mp_face_mesh_active_iris_delegatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<MpFaceMeshContext>)
        >
      >('mp_face_mesh_active_iris_delegate');
  late final _mp_face_mesh_active_iris_delegate =
      _mp_face_mesh_active_iris_delegatePtr
          .asFunction<int Function(ffi.Pointer<MpFaceMeshContext>)>();

  ffi.Pointer<MpFaceGeometryResult> mp_face_geometry_estimate(
    ffi.Pointer<MpLandmark> landmarks,
    int landmarks_count,
    int image_width,
    int image_height,
    ffi.Pointer<MpFaceGeometryOptions> options,
  ) {
    return _mp_face_geometry_estimate(
      landmarks,
      landmarks_count,
      image_width,
      image_height,
      options,
    );
  }

  late final _mp_face_geometry_estimatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceGeometryResult> Function(
            ffi.Pointer<MpLandmark>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<MpFaceGeometryOptions>,
          )
        >
      >('mp_face_geometry_estimate');
  late final _mp_face_geometry_estimate = _mp_face_geometry_estimatePtr
      .asFunction<
        ffi.Pointer<MpFaceGeometryResult> Function(
          ffi.Pointer<MpLandmark>,
          int,
          int,
          int,
          ffi.Pointer<MpFaceGeometryOptions>,
        )
      >();

  void mp_face_geometry_release_result(
    ffi.Pointer<MpFaceGeometryResult> result,
  ) {
    return _mp_face_geometry_release_result(result);
  }

  late final _mp_face_geometry_release_resultPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceGeometryResult>)>
      >('mp_face_geometry_release_result');
  late final _mp_face_geometry_release_result =
      _mp_face_geometry_release_resultPtr
          .asFunction<void Function(ffi.Pointer<MpFaceGeometryResult>)>();

  ffi.Pointer<ffi.Char> mp_face_geometry_last_error() {
    return _mp_face_geometry_last_error();
  }

  late final _mp_face_geometry_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_face_geometry_last_error',
      );
  late final _mp_face_geometry_last_error = _mp_face_geometry_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<MpBlendshapesContext> mp_blendshapes_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<MpBlendshapesCreateOptions> options,
  ) {
    return _mp_blendshapes_create(model_path, options);
  }

  late final _mp_blendshapes_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpBlendshapesContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<MpBlendshapesCreateOptions>,
          )
        >
      >('mp_blendshapes_create');
  late final _mp_blendshapes_create = _mp_blendshapes_createPtr
      .asFunction<
        ffi.Pointer<MpBlendshapesContext> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<MpBlendshapesCreateOptions>,
        )
      >();

  void mp_blendshapes_destroy(ffi.Pointer<MpBlendshapesContext> context) {
    return _mp_blendshapes_destroy(context);
  }

  late final _mp_blendshapes_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpBlendshapesContext>)>
      >('mp_blendshapes_destroy');
  late final _mp_blendshapes_destroy = _mp_blendshapes_destroyPtr
      .asFunction<void Function(ffi.Pointer<MpBlendshapesContext>)>();

  /// Runs the blendshapes model on the provided face landmarks. Requires at least
  /// 478 landmarks (iris). [image_width]/[image_height] are the dimensions the
  /// normalized landmarks are expressed against. Returns null on error.
  ffi.Pointer<MpBlendshapesResult> mp_blendshapes_process(
    ffi.Pointer<MpBlendshapesContext> context,
    ffi.Pointer<MpLandmark> landmarks,
    int landmarks_count,
    int image_width,
    int image_height,
  ) {
    return _mp_blendshapes_process(
      context,
      landmarks,
      landmarks_count,
      image_width,
      image_height,
    );
  }

  late final _mp_blendshapes_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpBlendshapesResult> Function(
            ffi.Pointer<MpBlendshapesContext>,
            ffi.Pointer<MpLandmark>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('mp_blendshapes_process');
  late final _mp_blendshapes_process = _mp_blendshapes_processPtr
      .asFunction<
        ffi.Pointer<MpBlendshapesResult> Function(
          ffi.Pointer<MpBlendshapesContext>,
          ffi.Pointer<MpLandmark>,
          int,
          int,
          int,
        )
      >();

  void mp_blendshapes_release_result(ffi.Pointer<MpBlendshapesResult> result) {
    return _mp_blendshapes_release_result(result);
  }

  late final _mp_blendshapes_release_resultPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpBlendshapesResult>)>
      >('mp_blendshapes_release_result');
  late final _mp_blendshapes_release_result = _mp_blendshapes_release_resultPtr
      .asFunction<void Function(ffi.Pointer<MpBlendshapesResult>)>();

  ffi.Pointer<ffi.Char> mp_blendshapes_last_error(
    ffi.Pointer<MpBlendshapesContext> context,
  ) {
    return _mp_blendshapes_last_error(context);
  }

  late final _mp_blendshapes_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpBlendshapesContext>)
        >
      >('mp_blendshapes_last_error');
  late final _mp_blendshapes_last_error = _mp_blendshapes_last_errorPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpBlendshapesContext>)
      >();
